# shaderx-backend

./: Cargo.toml  Dockerfile
migrations/: 0001_init_shaders.sql  0001_init_users.sql  0002_init_shaders.sql  0002_init_users.sql
src/: auth.rs  constants.rs  env.rs  errors.rs  logger.rs  main.rs  router_state.rs
src/middlewares/: mod.rs  token_refresh.rs
src/routes/: mod.rs  oauth.rs  shader.rs
