[package]
name = "shaderx-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.22"
nanoid = "0.4.0"
serde = { version = "1.0.209", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "macros", "postgres", "json", "chrono"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
