[package]
name = "shaderx-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["multipart", "macros"] }
axum-extra = { version = "0.9.3", features = ["cookie-private"] }
chrono = { version = "0.4.38", features = ["serde", "clock"] }
cookie = "0.18.1"
dotenv = "0.15.0"
log = "0.4.22"
nanoid = "0.4.0"
oauth2 = "4.4.2"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
shuttle-secrets = "0.42.0"
sqlx = { version = "0.8.1", features = ["runtime-tokio", "macros", "postgres", "json", "chrono", "uuid"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
tracing = "0.1.40"
